[package]
name = "small_gicp-sys"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = "0.33"
ros_pointcloud2 = { version = "0.5.3", features = [
  "nalgebra",
  "rayon",
  "derive",
], git = "https://github.com/stelzo/ros_pointcloud2.git", branch = "rkyv" }

[build-dependencies]
bindgen = "0.69"
cc = "1"
pkg-config = "0.3"

[dev-dependencies]
rand = "0.8"
approx = "0.5"
